# housing-policy-collector

./: .gitignore  AGENTS.md  README.md  claude.md  commitlint.config.cjs  commitlint.pr-title.config.cjs  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 정책-변경-작업-이슈.md
.github/workflows/: ci.yml
docs/: README.md  workflow.md
docs/00-product/: 01-problem-statement.md  02-requirements.md  03-scope-release-plan.md
docs/01-policy/: 01-eligibility-policy.md  02-data-privacy-policy.md  03-notification-policy.md
docs/02-tech-wiki/: 01-architecture.md  02-data-model.md  03-parser-spec.md
docs/03-operations/: 01-monitoring-sla.md  02-incident-response.md  03-scheduled-slack-report-runbook.md  04-commit-scope-governance.md  05-open-pr-close-runbook.md  05-open-pr-conflict-priority-report.md  05-pr-freeze-branch-lifecycle.md  06-slack-manual-test-guide.md
docs/04-ai-instructions/: 01-agent-guidelines.md  02-subagent-workflow.md  03-agent-doc-gap-analysis.md  03-multi-agent-collaboration-rules.md  04-context-window-playbook.md  05-prompt-engineering-playbook.md  06-agents-md-ops.md
scripts/: close_open_prs.py
src/: batch_main.py  batch_main.ts  main.py  main.ts
src/collector/: __init__.py  index.ts
src/matcher/: __init__.py  index.ts
tests/: acceptance-metrics.test.ts  acceptance-simulator.test.ts  batch-main.test.ts  collector.test.ts  main-profile.test.ts  main-runtime-metrics.test.ts  matcher.test.ts  notifier.test.ts  parser.test.ts  storage.test.ts  test_smoke.py
(+8 files in other folders)
